--- a/HyperShift/Client/_Imports.razor
+++ b/HyperShift/Client/_Imports.razor
@@ -5,5 +5,5 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using hyper_shift.Client
-@using hyper_shift.Client.Shared
+@using HyperShift.Client
+@using HyperShift.Client.Shared
