--- a/HyperShift/Server/Pages/Error.cshtml
+++ b/HyperShift/Server/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model hyper_shift.Server.Pages.ErrorModel
+@model HyperShift.Server.Pages.ErrorModel
 @{
     Layout = "_Layout";
     ViewData["Title"] = "Error";
